// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-vwo-cloud's trackEvent destination action: all fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "segment.yw0zltLcbQ",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "vwo_fs_environment": "yw0zltLcbQ",
          },
        },
        "isCustomEvent": true,
        "page": Object {
          "testType": "yw0zltLcbQ",
        },
        "testType": "yw0zltLcbQ",
        "vwoMeta": Object {
          "metric": Object {},
          "ogName": "yw0zltLcbQ",
          "source": "segment.cloud",
        },
      },
      "time": 1683296328967,
    },
    "msgId": "9CA260C8850151728733F4F1723CA265-1683296328",
    "sessionId": 1683296328,
    "visId": "9CA260C8850151728733F4F1723CA265",
    "visitor": Object {
      "props": Object {
        "vwo_fs_environment": "yw0zltLcbQ",
      },
    },
  },
}
`;

exports[`Testing snapshot for actions-vwo-cloud's trackEvent destination action: required fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "segment.yw0zltLcbQ",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "vwo_fs_environment": "yw0zltLcbQ",
          },
        },
        "isCustomEvent": true,
        "page": Object {},
        "vwoMeta": Object {
          "metric": Object {},
          "ogName": "yw0zltLcbQ",
          "source": "segment.cloud",
        },
      },
      "time": 1683296328915,
    },
    "msgId": "9CA260C8850151728733F4F1723CA265-1683296328",
    "sessionId": 1683296328,
    "visId": "9CA260C8850151728733F4F1723CA265",
    "visitor": Object {
      "props": Object {
        "vwo_fs_environment": "yw0zltLcbQ",
      },
    },
  },
}
`;
